--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ Map&lt;Method, DbTimer&gt; getTimers()</pre>
                 <h3>Transactions</h3>
                 mJDBC supports the following pattern for transactions:
                 <ul class="spec-list">
-                    <li>A developer defines and implement some Java interface.</li>
+                    <li>A developer defines and implements some Java interface.</li>
                     <li>mJDBC provides proxy-implementation for the given interface to manage transactional context on each interface method call
                         and forward all calls to the original implementation.
                     </li>
